--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -6,3 +6,43 @@ body {
 #nprogress .bar {
     background: $primary-color !important; //自定义Nprogress颜色
 }
+
+.animate__delay-100ms {
+    animation-delay: 100ms;
+}
+
+.animate__delay-200ms {
+    animation-delay: 200ms;
+}
+
+.animate__delay-300ms {
+    animation-delay: 300ms;
+}
+
+.animate__delay-400ms {
+    animation-delay: 400ms;
+}
+
+.animate__delay-500ms {
+    animation-delay: 500ms;
+}
+
+.animate__delay-600ms {
+    animation-delay: 600ms;
+}
+
+.animate__delay-700ms {
+    animation-delay: 700ms;
+}
+
+.animate__delay-800ms {
+    animation-delay: 800ms;
+}
+
+.animate__delay-900ms {
+    animation-delay: 900ms;
+}
+
+.animate__delay-1s {
+    animation-delay: 1s;
+}
