--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -60,3 +60,29 @@ body {
 .animate__delay-1s {
     animation-delay: 1s;
 }
+
+@keyframes down-slide {
+    0% {
+        transform: translateY(4px);
+    }
+
+    25% {
+        transform: translateY(2px);
+    }
+
+    50% {
+        transform: translateY(0);
+    }
+
+    50% {
+        transform: translateY(-2px);
+    }
+
+    100% {
+        transform: translateY(-4px);
+    }
+}
+
+.animate-down-slide {
+    animation: down-slide 800ms linear 0s infinite alternate;
+}
