--- a/src/assets/scss/config/setting.scss
+++ b/src/assets/scss/config/setting.scss
@@ -26,7 +26,7 @@
 }
 
 //主题背景色
-$primary-color: var(--m-theme-bg-color);
+$primary-color: #ffd78e;
 
 //主题字体颜色
-$primary-font-color: var(--m-theme-font-color);
+$primary-font-color: #ffd78e;
